fix: dark mode style

--- a/css/style.css
+++ b/css/style.css
@@ -314,22 +314,23 @@ body{
 
 .container.dark-view,
 .container main .left-side.dark-view,
-.container main .left-side nav .user.dark-view,
-.container main .left-side nav .user .my-user-option.dark-view,
-.container main .left-side nav .nav-search-input .search-input.dark-view,
-.container main .left-side nav .nav-search-input .search-input input.dark-view,
-.container main .right-side .current-chat-user.dark-view,
-.container main .right-side .current-chat-messages.dark-view,
-.container main .right-side .input-message.dark-view,
-.container main .right-side .input-message input.dark-view
+.container main .left-side.dark-view nav .user,
+.container main .left-side.dark-view nav .nav-search-input .search-input,
+.container main .right-side.dark-view .current-chat-user,
+.container main .right-side.dark-view .current-chat-messages,
+.container main .right-side.dark-view .input-message
 {
     background-color: rgb(25, 25, 25);
     color: rgb(190, 190, 190);
-    
 }
 
-.container main .right-side .current-chat-messages.dark-view {
-    color: rgb(43, 43, 43);
+.container main .right-side .input-message input.dark-view,
+.container main .left-side nav .nav-search-input .search-input input.dark-view{
+    background-color: rgb(55, 55, 55);
+}
+
+.container main .right-side.dark-view .current-chat-messages {
+    color: rgb(50, 50, 50);
     filter: invert(100%);
     
 }
